--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
 <div class="section1">
 	<ul class="section1_box">
 		<li class="section1_items">
-		<a href="javascript:;">
+		<a href="hlzws.html">
 			<div class="section1_items_img">
 				<img src="images/hlks.png">
 			</div>
-			<span class="section1_items_font">黑龙开锁</span></a>
+			<span class="section1_items_font">黑龙指纹锁</span></a>
 		</li>
 		<li class="section1_items">
 		<a href="javascript:;">
 			<div class="section1_items_img">
 				<img src="images/hlaj.png">
 			</div>
-			<span class="section1_items_font">黑龙搬家</span></a>
+			<span class="section1_items_font">黑龙开锁</span></a>
 		</li>
 		<li class="section1_items">
 		<a href="javascript:;">
 			<div class="section1_items_img">
 				<img src="images/hlwx.png">
 			</div>
-			<span class="section1_items_font">黑龙维修</span></a>
+			<span class="section1_items_font">黑龙搬家</span></a>
 		</li>
 		<li class="section1_items">
 		<a href="javascript:;">
