--- a/hlzws.html
+++ b/hlzws.html
@@ -76,9 +76,9 @@
 			<div class="hlzws_section2_li_fl"><img src="images/hlzws_fl.png"></div>
 			<ul class="s_ul">
                 <li data-value="全部" class="selected">全部</li>
-                <li data-value="现代指纹锁">现代指纹锁</li>
+              <!--   <li data-value="现代指纹锁">现代指纹锁</li>
                 <li data-value="欧式指纹锁">欧式指纹锁</li>
-                <li data-value="指纹锁配件">指纹锁配件</li>
+                <li data-value="指纹锁配件">指纹锁配件</li> -->
             </ul>
             </div>
 		</li>
@@ -94,7 +94,7 @@
 <div class="hlzws_section3">
 	<div class="hlzws_section3_item">
 		<div class="hlzws_section3_item_img">
-			<a href="javascript:;"><img src="images/hlzws_tp.png"></a>
+			<a href="hlzws_sp.html"><img src="images/hlzws_tp.png"></a>
 		</div>
 		<div class="hlzws_section3_item_font1">黑龙指纹锁 现代简约</div>
 		<div class="hlzws_section3_item_font2">防盗门锁 微信开锁 磁卡...</div>
@@ -102,7 +102,7 @@
 	</div>
 	<div class="hlzws_section3_item">
 		<div class="hlzws_section3_item_img">
-			<a href="javascript:;"><img src="images/hlzws_tp.png"></a>
+			<a href="hlzws_sp.html"><img src="images/hlzws_tp.png"></a>
 		</div>
 		<div class="hlzws_section3_item_font1">黑龙指纹锁 现代简约</div>
 		<div class="hlzws_section3_item_font2">防盗门锁 微信开锁 磁卡...</div>
