--- a/hlzws.html
+++ b/hlzws.html
@@ -115,7 +115,7 @@
 	<footer>
 		<ul>
 			<li>
-				<a href="javascript:;">
+				<a href="index.html">
 					<img src="images/f_home1.png" alt="" class="ig1">
 					<img src="images/f_home.png" alt="" class="ig2">
 					<div class="d3">首页</div>
